@@ -1,41 +1,88 @@
 package org.hofftech.parking.service;
 
 import lombok.extern.slf4j.Slf4j;
-import org.hofftech.parking.model.dto.ParcelPosition;
-import org.hofftech.parking.model.entity.Truck;
-import org.hofftech.parking.model.dto.ParcelDto;
+import org.hofftech.parking.model.Parcel;
+import org.hofftech.parking.model.ParcelStartPosition;
+import org.hofftech.parking.model.Truck;
 
 import java.util.List;
 
+/**
+ * Сервис для управления размещением упаковок в грузовике.
+ */
 @Slf4j
 public class ParcelService {
 
-    public boolean canAddParcel(Truck truck, ParcelDto pkg, int startX, int startY) {
-        log.debug("Проверка возможности добавить упаковку {} в координаты X={}, Y={}", pkg.getType(), startX, startY);
-        List<String> shape = pkg.getType().getShape();
+    /**
+     * Проверяет возможность добавления упаковки в указанные координаты.
+     *
+     * @param truck  Грузовик, в который пытаются добавить упаковку.
+     * @param parcel Упаковка, которую необходимо добавить.
+     * @param startX Начальная координата X для размещения упаковки.
+     * @param startY Начальная координата Y для размещения упаковки.
+     * @return {@code true}, если упаковку можно добавить, {@code false} в противном случае.
+     */
+    protected boolean canAddPackage(Truck truck, Parcel parcel, int startX, int startY) {
+        log.debug("Проверяем возможность добавить упаковку {} в координаты X={}, Y={}", parcel.getName(), startX, startY);
+        List<String> shape = parcel.getUniqueShape();
         int height = shape.size();
 
-        return isWithinTruckBounds(truck, shape, startX, startY, height) &&
-                !isOverlappingWithExistingParcels(truck, shape, startX, startY);
+        if (checkTruckLimits(truck, parcel, startX, startY, height, shape)) return false;
+
+        if (checkForIntersection(truck, parcel, startX, startY, height, shape)) return false;
+
+        String topRow = shape.getFirst();
+        int requiredSupport = (int) Math.ceil(topRow.length() / 2.0);
+        int support = 0;
+        if (startY == 0) {
+            log.debug("Упаковка {} внизу грузовика, опора не требуется.", parcel.getName());
+            return true;
+        }
+
+        return !checkForSupport(truck, parcel, startX, startY, topRow, support, requiredSupport);
     }
 
-    public boolean isWithinTruckBounds(Truck truck, List<String> shape, int startX, int startY, int height) {
-        for (int y = 0; y < height; y++) {
-            int rowWidth = shape.get(y).length();
-            if (startX + rowWidth > Truck.getWIDTH() || startY + y >= Truck.getHEIGHT()) {
-                log.debug("Упаковка {} выходит за пределы грузовика", shape);
-                return false;
+    /**
+     * Проверяет наличие достаточной опоры для размещения упаковки.
+     *
+     * @param truck           Грузовик, в котором размещается упаковка.
+     * @param parcel          Упаковка, для которой проверяется опора.
+     * @param startX          Начальная координата X.
+     * @param startY          Начальная координата Y.
+     * @param topRow          Верхняя строка формы упаковки.
+     * @param support         Текущее количество опор.
+     * @param requiredSupport Необходимое количество опор.
+     * @return {@code true}, если опоры недостаточно, {@code false} иначе.
+     */
+    private boolean checkForSupport(Truck truck, Parcel parcel, int startX, int startY, String topRow, int support, int requiredSupport) {
+        for (int x = 0; x < topRow.length(); x++) {
+            if (topRow.charAt(x) != ' ' && truck.getGrid()[startY - 1][startX + x] != ' ') {
+                support++;
             }
         }
-        return true;
+        if (support < requiredSupport) {
+            log.debug("Упаковка {} не имеет достаточной опоры. Требуется {}, доступно {}", parcel.getName(), requiredSupport, support);
+            return true;
+        }
+        return false;
     }
 
-
-    public boolean isOverlappingWithExistingParcels(Truck truck, List<String> shape, int startX, int startY) {
-        for (int y = 0; y < shape.size(); y++) {
+    /**
+     * Проверяет пересечение упаковки с уже размещенными объектами в грузовике.
+     *
+     * @param truck  Грузовик, в котором размещается упаковка.
+     * @param parcel Упаковка, которую проверяют на пересечение.
+     * @param startX Начальная координата X.
+     * @param startY Начальная координата Y.
+     * @param height Высота формы упаковки.
+     * @param shape  Форма упаковки.
+     * @return {@code true}, если происходит пересечение, {@code false} иначе.
+     */
+    private boolean checkForIntersection(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
+        for (int y = 0; y < height; y++) {
             for (int x = 0; x < shape.get(y).length(); x++) {
                 if (shape.get(y).charAt(x) != ' ' && truck.getGrid()[startY + y][startX + x] != ' ') {
-                    log.debug("Упаковка {} пересекается с другой упаковкой", shape);
+                    log.debug("Упаковка {} пересекается с другой посылкой", parcel.getName());
                     return true;
                 }
             }
@@ -43,28 +90,66 @@ public class ParcelService {
         return false;
     }
 
+    /**
+     * Проверяет, выходит ли упаковка за пределы грузовика.
+     *
+     * @param truck  Грузовик, в который пытаются добавить упаковку.
+     * @param parcel Упаковка, которую проверяют.
+     * @param startX Начальная координата X.
+     * @param startY Начальная координата Y.
+     * @param height Высота формы упаковки.
+     * @param shape  Форма упаковки.
+     * @return {@code true}, если упаковка выходит за пределы, {@code false} иначе.
+     */
+    private boolean checkTruckLimits(Truck truck, Parcel parcel, int startX, int startY, int height, List<String> shape) {
+        for (int y = 0; y < height; y++) {
+            int rowWidth = shape.get(y).length();
+            if (startX + rowWidth > truck.getWidth() || startY + y >= truck.getHeight()) {
+                log.debug("Упаковка {} выходит за пределы грузовика", parcel.getName());
+                return true;
+            }
+        }
+        return false;
+    }
 
-    public boolean addParcels(Truck truck, ParcelDto pkg) {
-        log.info("Пытаемся добавить упаковку {} в грузовик.", pkg.getType());
-        List<String> shape = pkg.getType().getShape();
+    /**
+     * Добавляет упаковку в грузовик, если это возможно.
+     *
+     * @param truck  Грузовик, в который будет добавлена упаковка.
+     * @param parcel Упаковка, которую необходимо добавить.
+     * @return {@code true}, если упаковка успешно добавлена, {@code false} иначе.
+     */
+    protected boolean addPackage(Truck truck, Parcel parcel) {
+        log.info("Пытаемся добавить упаковку {} в грузовик.", parcel.getName());
+
+        List<String> shape = parcel.getUniqueShape();
         int height = shape.size();
 
-        for (int startY = 0; startY <= Truck.getHEIGHT() - height; startY++) {
-            for (int startX = 0; startX <= Truck.getWIDTH() - shape.get(0).length(); startX++) {
-                if (canAddParcel(truck, pkg, startX, startY)) {
-                    placeParcel(truck, pkg, startX, startY);
+        for (int startY = 0; startY <= truck.getHeight() - height; startY++) {
+            for (int startX = 0; startX <= truck.getWidth() - shape.getFirst().length(); startX++) {
+                if (canAddPackage(truck, parcel, startX, startY)) {
+                    log.info("Упаковка {} успешно добавлена", parcel.getName());
+                    parcel.setParcelStartPosition(new ParcelStartPosition(startX, startY));
+                    placePackage(truck, parcel, startX, startY);
                     return true;
                 }
             }
         }
 
-        log.warn("Упаковка {} не смогла быть добавлена в грузовик.", pkg.getType());
+        log.warn("Упаковка {} не смогла быть добавлена в грузовик.", parcel.getName());
         return false;
     }
 
-
-    private void placeParcel(Truck truck, ParcelDto pkg, int startX, int startY) {
-        List<String> shape = pkg.getType().getShape();
+    /**
+     * Размещает упаковку на грузовике в указанных координатах.
+     *
+     * @param truck  Грузовик, на котором будет размещена упаковка.
+     * @param parcel Упаковка, которую необходимо разместить.
+     * @param startX Начальная координата X.
+     * @param startY Начальная координата Y.
+     */
+    protected void placePackage(Truck truck, Parcel parcel, int startX, int startY) {
+        List<String> shape = parcel.getUniqueShape();
 
         for (int y = 0; y < shape.size(); y++) {
             for (int x = 0; x < shape.get(y).length(); x++) {
@@ -73,43 +158,8 @@ public class ParcelService {
                 }
             }
         }
-        pkg.setParcelPosition(new ParcelPosition(startX, startY));
-        truck.getParcelDtos().add(pkg);
-        log.info("Упаковка {} размещена на грузовике", pkg.getType());
-    }
-
-    public void placeParcels(List<ParcelDto> parcelDtoList, List<Truck> truckEntities, int maxTrucks) {
-        for (ParcelDto pkg : parcelDtoList) {
-            boolean placed = false;
-
-            for (Truck truck : truckEntities) {
-                if (addParcels(truck, pkg)) {
-                    placed = true;
-                    log.info("Упаковка {} размещена в существующем грузовике.", pkg.getType());
-                    break;
-                }
-            }
-
-            if (!placed) {
-                if (truckEntities.size() < maxTrucks) {
-                    Truck newTruck = new Truck();
-                    log.info("Создаётся новый грузовик для размещения упаковки {}.", pkg.getType());
-                    if (addParcels(newTruck, pkg)) {
-                        truckEntities.add(newTruck);
-                        placed = true;
-                        log.info("Упаковка {} размещена в новом грузовике.", pkg.getType());
-                    } else {
-                        log.error("Упаковка {} с ID {} не может быть размещена даже в новом грузовике.",
-                                pkg.getType(), pkg.getId());
-                        throw new RuntimeException("Упаковка " + pkg.getType() + " с ID " + pkg.getId() +
-                                " не может быть размещена даже в новом грузовике.");
-                    }
-                } else {
-                    log.error("Превышен лимит грузовиков: {}", maxTrucks);
-                    throw new RuntimeException("Превышен лимит грузовиков: " + maxTrucks);
-                }
-            }
-        }
-        log.info("Все посылки успешно размещены по грузовикам.");
+        parcel.setParcelStartPosition(new ParcelStartPosition(startX, startY));
+        truck.getParcels().add(parcel);
+        log.info("Упаковка {} размещена на грузовике", parcel.getName());
     }
 }
